--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
+div{
+    display: inline-block;
+    width: 35%;
+    margin: 10px;
+    border: 1px solid #dcdbdb;
+    padding: 10px;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
