feat:email NewsLetter in about page

--- a/tasks_day2/template/about.html
+++ b/tasks_day2/template/about.html
@@ -17,6 +17,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+      <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
@@ -26,5 +29,20 @@
     <link rel="stylesheet" href="./src/css/about.css" />
     <script defer src="./src/js/about.js"></script>
   </head>
-  <body></body>
+  <body>
+    <!--NewsLetter section-->
+    
+
+    <section class="newsletter">
+    <div class="newsletter-text">
+      <h2>Newsletter - Stay tuned and get the latest update</h2>
+      <p>Far far away, behind the word mountains</p>
+    </div>
+
+    <form class="newsletter-form">
+      <input type="email" placeholder="Enter email address" required>
+      <button type="submit"><i class="bi bi-send"></i></button> 
+    </form>
+  </section>
+  </body>
 </html>
