feat: add structure for team section

--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -26,5 +26,53 @@
     <link rel="stylesheet" href="./src/css/team.css" />
     <script defer src="./src/js/team.js"></script>
   </head>
-  <body></body>
+  <body>
+        <section class="cards">
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Anna Hanzen</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Arthur MaGregor</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Brian Wooden</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Anna Hanzen</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Arthur MaGregor</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Brian Wooden</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Anna Hanzen</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Arthur MaGregor</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <h3>Ph.D Adrian Molises</h3>
+        <p>Developer and Lead Instructor</p>
+      </div>
+    </section>
+  </body>
 </html>
