feat: enhance html structure and add basic style

--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -30,48 +30,74 @@
         <section class="cards">
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Anna Hanzen</h3>
-        <p>Developer and Lead Instructor</p>
+        <div class="content">
+          <h3>Ph.D Anna Hanzen</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Arthur MaGregor</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Brian Wooden</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
       </div>
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Arthur MaGregor</h3>
-        <p>Developer and Lead Instructor</p>
+        <div class="content">
+          <h3>Ph.D Anna Hanzen</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Arthur MaGregor</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
+      </div>
+      <div class="card">
+        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Brian Wooden</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
       </div>
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Brian Wooden</h3>
-        <p>Developer and Lead Instructor</p>
+        <div class="content">
+          <h3>Ph.D Anna Hanzen</h3>
+          <p>Developer and Lead Instructor</p>
+        </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Anna Hanzen</h3>
-        <p>Developer and Lead Instructor</p>
+        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Arthur MaGregor</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Arthur MaGregor</h3>
-        <p>Developer and Lead Instructor</p>
-      </div>
-      <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Brian Wooden</h3>
-        <p>Developer and Lead Instructor</p>
-      </div>
-      <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Anna Hanzen</h3>
-        <p>Developer and Lead Instructor</p>
-      </div>
-      <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Arthur MaGregor</h3>
-        <p>Developer and Lead Instructor</p>
-      </div>
-      <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
-        <h3>Ph.D Adrian Molises</h3>
-        <p>Developer and Lead Instructor</p>
+        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="content">
+          <h3>Ph.D Adrian Molises</h3>
+          <p>Developer and Lead Instructor</p>
+
+        </div>
       </div>
     </section>
   </body>
