--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/src/css/index.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
@@ -17,6 +18,80 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+          <!-- Header -->
+
+      <!-- ===== Benefits Section ===== -->
+<section class="py-5">
+  <div class="container">
+    <div class="row align-items-center">
+      
+      <!-- Left: Image -->
+      <div class="col-lg-6 mb-4 mb-lg-0 text-center">
+        <img src="src/imgs/imgi_2_about.jpg" alt="Learning Image" class="img-fluid rounded">
+      </div>
+
+      <!-- Right: Content -->
+      <div class="col-lg-6">
+        <p class="text-uppercase text-primary fw-bold">Learn Anything</p>
+        <h2 class="mb-4">Benefits About Online<br>Learning Expertise</h2>
+
+        <!-- Box 1 -->
+        <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
+          <div class="me-3 text-primary fs-2">
+            <i class="fa-solid fa-book-open"></i>
+          </div>
+          <div>
+            <h5>Online Courses</h5>
+            <p class="mb-0 text-muted">
+              Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+            </p>
+          </div>
+        </div>
+
+        <!-- Box 2 -->
+        <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
+          <div class="me-3 text-primary fs-2">
+            <i class="fa-solid fa-certificate"></i>
+          </div>
+          <div>
+            <h5>Earn A Certificates</h5>
+            <p class="mb-0 text-muted">
+              Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+            </p>
+          </div>
+        </div>
+
+        <!-- Box 3 -->
+        <div class="d-flex p-3 bg-light rounded shadow-sm">
+          <div class="me-3 text-primary fs-2">
+            <i class="fa-solid fa-user-graduate"></i>
+          </div>
+          <div>
+            <h5>Learn with Expert</h5>
+            <p class="mb-0 text-muted">
+              Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
