--- a/tasks_day2/template/signup.html
+++ b/tasks_day2/template/signup.html
@@ -17,6 +17,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+<img style="width: 600px; height: 600px;" src="/src/imgs/imgi_2_about.jpg" alt="">
+
+
+
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
