feat: add map section

--- a/tasks_day2/template/contact.html
+++ b/tasks_day2/template/contact.html
@@ -31,7 +31,17 @@
       <div class="container overflow-hidden">
         <div class="row">
           <div class="col">
-            <div class="p-0"></div>
+            <div class="p-0">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6045.721454402323!2d-74.00613890642093!3d40.74308999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259bb65ffb4b7%3A0xfb6f9cef91401b93!2sEvents%20Coverage%20and%20Photography!5e0!3m2!1sen!2seg!4v1755691796957!5m2!1sen!2seg"
+                width="600"
+                height="700"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
           </div>
           <div class="col bg-white">
             <div class="contact-wrap w-100 p-md-5 p-4">
