add : mail section in team page

--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -23,82 +23,90 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="./src/css/team.css" />
     <script defer src="./src/js/team.js"></script>
   </head>
   <body>
-        <section class="cards">
+    <section class="cards">
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Brian Wooden</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Brian Wooden</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <img src="./src/images/team-1.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <img src="./src/images/team-2.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
-        <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <img src="./src/images/team-4.jpg" alt="" srcset="" />
         <div class="content">
           <h3>Ph.D Adrian Molises</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
+    </section>
+    <section class="newsletter">
+      <div class="newsletter-text">
+        <h2>Newsletter - Stay tuned and get the latest update</h2>
+        <p>Far far away, behind the word mountains</p>
+      </div>
+
+      <form class="newsletter-form">
+        <input type="email" placeholder="Enter email address" required />
+        <button type="submit"><i class="bi bi-send"></i></button>
+      </form>
     </section>
   </body>
 </html>
