add: footer input container

--- a/tasks_day2/template/contact.html
+++ b/tasks_day2/template/contact.html
@@ -26,5 +26,27 @@
     <link rel="stylesheet" href="./src/css/contact.css" />
     <script defer src="./src/js/contact.js"></script>
   </head>
-  <body></body>
+  <body>
+    <footer>
+      <section class="fst-footer-section">
+        <div
+          class="fst-content container m-auto d-flex justify-content-around align-items-center"
+        >
+          <div>
+            <h2 class="h4">Newsletter - Stay tune and get the latest update</h2>
+            <p class="text-secondary">
+              Far far away, behind the word mountains
+            </p>
+          </div>
+          <div class="input-container">
+            <input type="text" placeholder="Enter email address" /><i
+              class="fa-solid fa-paper-plane"
+            ></i>
+          </div>
+        </div>
+      </section>
+
+      <!-- second -->
+    </footer>
+  </body>
 </html>
