--- a/tasks_day2/template/index.html
+++ b/tasks_day2/template/index.html
@@ -1,129 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Academia - Free Bootstrap 5 Template by Colorlib</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <script defer src="./src/js/index.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Academia - Free Bootstrap 5 Template by Colorlib</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./src/css/index.css" />
-  <script defer src="./src/js/index.js"></script>
-</head>
-
-<body>
-  <section class="py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <!-- Left: Image -->
-        <div class="col-lg-6 mb-4 mb-lg-0 text-center">
-          <img src="src/imgs/imgi_2_about.jpg" alt="Learning Image" class="img-fluid rounded" />
+  <body>
+    <div class="top-wrap">
+      <div class="container">
+        <div class="row">
+          <div class="col-md col-xl-5 d-flex align-items-center">
+            <a class="navbar-brand align-items-center" href="index.html">
+              Academia
+              <span>Online Education &amp; Learning</span>
+            </a>
+          </div>
+          <div class="col-md d-flex align-items-center">
+            <div class="con d-flex">
+              <div class="icon icon-phone">
+                <i class="fa-regular fa-clock"></i>
+              </div>
+              <div class="text">
+                <span>Monday - Friday</span>
+                <strong>8:00AM-8:00PM</strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-md d-flex align-items-center">
+            <div class="con d-flex">
+              <div class="icon icon-phone">
+                <i class="fa-solid fa-headphones"></i>
+              </div>
+              <div class="text">
+                <span>Call Us</span>
+                <strong>+2 392 3929 210</strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-md d-flex justify-content-end align-items-center">
+            <div class="social-media">
+              <p class="mb-0 d-flex">
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  ><span><i class="fa-brands fa-facebook-f"></i></span
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  ><span><i class="fa-brands fa-twitter"></i></span
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  ><span><i class="fa-brands fa-instagram"></i></span
+                ></a>
+                <a
+                  href="#"
+                  class="d-flex align-items-center justify-content-center"
+                  ><span><i class="fa-brands fa-dribbble"></i></span
+                ></a>
+              </p>
+            </div>
+          </div>
         </div>
-
-        <!-- Right: Content -->
-        <div class="col-lg-6">
-          <p class="text-uppercase text-primary fw-bold">Learn Anything</p>
-          <h2 class="mb-4">Benefits About Online<br />Learning Expertise</h2>
-
-          <!-- Box 1 -->
-          <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
-            <div class="me-3 text-primary fs-2">
-              <i class="fa-solid fa-book-open"></i>
-            </div>
-            <div>
-              <h5>Online Courses</h5>
-              <p class="mb-0 text-muted">
-                Far far away, behind the word mountains, far from the
-                countries Vokalia and Consonantia, there live the blind texts.
-              </p>
-            </div>
+      </div>
+    </div>
+    <section class="py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Left: Image -->
+          <div class="col-lg-6 mb-4 mb-lg-0 text-center">
+            <img
+              src="src/imgs/imgi_2_about.jpg"
+              alt="Learning Image"
+              class="img-fluid rounded"
+            />
           </div>
 
-          <!-- Box 2 -->
-          <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
-            <div class="me-3 text-primary fs-2">
-              <i class="fa-solid fa-certificate"></i>
-            </div>
-            <div>
-              <h5>Earn A Certificates</h5>
-              <p class="mb-0 text-muted">
-                Far far away, behind the word mountains, far from the
-                countries Vokalia and Consonantia, there live the blind texts.
-              </p>
-            </div>
-          </div>
+          <!-- Right: Content -->
+          <div class="col-lg-6">
+            <p class="text-uppercase text-primary fw-bold">Learn Anything</p>
+            <h2 class="mb-4">Benefits About Online<br />Learning Expertise</h2>
 
-          <!-- Box 3 -->
-          <div class="d-flex p-3 bg-light rounded shadow-sm">
-            <div class="me-3 text-primary fs-2">
-              <i class="fa-solid fa-user-graduate"></i>
+            <!-- Box 1 -->
+            <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
+              <div class="me-3 text-primary fs-2">
+                <i class="fa-solid fa-book-open"></i>
+              </div>
+              <div>
+                <h5>Online Courses</h5>
+                <p class="mb-0 text-muted">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
             </div>
-            <div>
-              <h5>Learn with Expert</h5>
-              <p class="mb-0 text-muted">
-                Far far away, behind the word mountains, far from the
-                countries Vokalia and Consonantia, there live the blind texts.
-              </p>
+
+            <!-- Box 2 -->
+            <div class="d-flex mb-3 p-3 bg-light rounded shadow-sm">
+              <div class="me-3 text-primary fs-2">
+                <i class="fa-solid fa-certificate"></i>
+              </div>
+              <div>
+                <h5>Earn A Certificates</h5>
+                <p class="mb-0 text-muted">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
+            </div>
+
+            <!-- Box 3 -->
+            <div class="d-flex p-3 bg-light rounded shadow-sm">
+              <div class="me-3 text-primary fs-2">
+                <i class="fa-solid fa-user-graduate"></i>
+              </div>
+              <div>
+                <h5>Learn with Expert</h5>
+                <p class="mb-0 text-muted">
+                  Far far away, behind the word mountains, far from the
+                  countries Vokalia and Consonantia, there live the blind texts.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="stats-section">
-    <div class="stats">
-      <div class="stat">
-        <img src="./src/imgs/icon_1-removebg-preview.png" alt="" class="bi bi-mortarboard" />
-        <div class="number" data-target="3000">0</div>
-        <div class="label">Success Stories</div>
+    </section>
+    <section class="stats-section">
+      <div class="stats">
+        <div class="stat">
+          <img
+            src="./src/imgs/icon_1-removebg-preview.png"
+            alt=""
+            class="bi bi-mortarboard"
+          />
+          <div class="number" data-target="3000">0</div>
+          <div class="label">Success Stories</div>
+        </div>
+        <div class="stat">
+          <img
+            src="./src/imgs/icon2-removebg-preview.png"
+            alt=""
+            class="bi bi-mortarboard"
+          />
+          <div class="number" data-target="320">0</div>
+          <div class="label">Trusted Tutors</div>
+        </div>
+        <div class="stat">
+          <img
+            src="./src/imgs/icon3-removebg-preview.png"
+            alt=""
+            class="bi bi-mortarboard"
+          />
+          <div class="number" data-target="1000">0</div>
+          <div class="label">Schedules</div>
+        </div>
+        <div class="stat">
+          <img
+            src="./src/imgs/icon4-removebg-preview.png"
+            alt=""
+            class="bi bi-mortarboard"
+          />
+          <div class="number" data-target="587">0</div>
+          <div class="label">Courses</div>
+        </div>
       </div>
-      <div class="stat">
-        <img src="./src/imgs/icon2-removebg-preview.png" alt="" class="bi bi-mortarboard" />
-        <div class="number" data-target="320">0</div>
-        <div class="label">Trusted Tutors</div>
-      </div>
-      <div class="stat">
-        <img src="./src/imgs/icon3-removebg-preview.png" alt="" class="bi bi-mortarboard" />
-        <div class="number" data-target="1000">0</div>
-        <div class="label">Schedules</div>
-      </div>
-      <div class="stat">
-        <img src="./src/imgs/icon4-removebg-preview.png" alt="" class="bi bi-mortarboard" />
-        <div class="number" data-target="587">0</div>
-        <div class="label">Courses</div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!--NewsLetter section-->
+    <!--NewsLetter section-->
 
-  <section class="newsletter">
-    <div class="newsletter-text">
-      <h2>Newsletter - Stay tuned and get the latest update</h2>
-      <p>Far far away, behind the word mountains</p>
-    </div>
     <section class="newsletter">
       <div class="newsletter-text">
         <h2>Newsletter - Stay tuned and get the latest update</h2>
         <p>Far far away, behind the word mountains</p>
       </div>
+      <section class="newsletter">
+        <div class="newsletter-text">
+          <h2>Newsletter - Stay tuned and get the latest update</h2>
+          <p>Far far away, behind the word mountains</p>
+        </div>
 
+        <form class="newsletter-form">
+          <input type="email" placeholder="Enter email address" required />
+          <button type="submit"><i class="bi bi-send"></i></button>
+        </form>
+      </section>
       <form class="newsletter-form">
         <input type="email" placeholder="Enter email address" required />
         <button type="submit"><i class="bi bi-send"></i></button>
       </form>
     </section>
-    <form class="newsletter-form">
-      <input type="email" placeholder="Enter email address" required />
-      <button type="submit"><i class="bi bi-send"></i></button>
-    </form>
-  </section>
-</body>
-
+  </body>
 </html>
