--- a/tasks_day2/template/team.html
+++ b/tasks_day2/template/team.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
@@ -30,54 +31,90 @@
         <section class="cards">
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Brian Wooden</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Brian Wooden</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-1.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Anna Hanzen</h3>
           <p>Developer and Lead Instructor</p>
@@ -85,18 +122,28 @@
       </div>
       <div class="card">
         <img src="./src/images/team-2.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Arthur MaGregor</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
       <div class="card">
         <img src="./src/images/team-4.jpg" alt="" srcset="">
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google-plus-g"></i>
+        </div>
         <div class="content">
           <h3>Ph.D Adrian Molises</h3>
           <p>Developer and Lead Instructor</p>
-
         </div>
       </div>
     </section>
