add:add nav bar at courses

--- a/tasks_day2/template/courses.html
+++ b/tasks_day2/template/courses.html
@@ -27,6 +27,105 @@
     <script defer src="./src/js/courses.js"></script>
   </head>
   <body>
+    <div class="top-wrap">
+      <div class="container">
+        <div class="row">
+          <div class="col-md col-xl-5 d-flex align-items-center">
+            <a class="navbar-brand align-items-center" href="index.html">
+              Academia
+              <span>Online Education &amp; Learning</span>
+            </a>
+          </div>
+          <div class="col-md d-flex align-items-center">
+            <div class="con d-flex">
+              <div class="icon icon-phone">
+                <i class="fa-regular fa-clock"></i>
+              </div>
+              <div class="text">
+                <span>Monday - Friday</span>
+                <strong>8:00AM-8:00PM</strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-md d-flex align-items-center">
+            <div class="con d-flex">
+              <div class="icon icon-phone">
+                <i class="fa-solid fa-headphones"></i>
+              </div>
+              <div class="text">
+                <span>Call Us</span>
+                <strong>+2 392 3929 210</strong>
+              </div>
+            </div>
+          </div>
+          <div class="col-md d-flex justify-content-end align-items-center">
+            <div class="social-media">
+              <p class="mb-0 d-flex">
+                <a href="#" class="d-flex align-items-center justify-content-center"><span><i
+                      class="fa-brands fa-facebook-f"></i></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center"><span><i
+                      class="fa-brands fa-twitter"></i></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center"><span><i
+                      class="fa-brands fa-instagram"></i></span></a>
+                <a href="#" class="d-flex align-items-center justify-content-center"><span><i
+                      class="fa-brands fa-dribbble"></i></span></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg ftco-navbar-light">
+      <div class="container-xl">
+        <a href="#" class="btn-custom order-lg-last">Get Certificate</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span> Menu
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link  " href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="courses.html">All Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="team.html">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="pricing.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">Journal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="hero-wrap" style="background-image: url('src/images/bg_2.jpg.webp')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text align-items-center justify-content-center">
+            <div class="col-md-9 pt-5 mt-5 text-center">
+              <div class="text mt-5 pt-5 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+                <span class="d-block text-center " style="color: white; font-size: 14px ; font-weight: 600;"><a class="a_home " href="index.html">HOME > </a>Courses   ></span>
+                <h1 class="mb-0 bread head" style="color: white">Explore Courses</h1>
+               
+              </div>
+            </div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </section>
     <!-- Course Cards -->
     <div class="row g-4 mb-5 w-85 mx-auto">
       <!-- Course 1 -->
