--- a/tasks_day2/template/src/css/index.css
+++ b/tasks_day2/template/src/css/index.css
@@ -358,6 +358,7 @@ body {
 	min-height: 750px;
 	color: rgba(255, 255, 255, 0.8);
 	z-index: 3;
+}
 .img-fluid {
   max-width: 100%;
   height: auto;
